# mastic

./: .gitignore  ARTIFACT-EVALUATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  rustfmt.toml
.github/workflows/: ci-build.yml  rust.yml
artifact/: README.md
artifact/configs/figure-3/: Mastic-m=1,n=128.toml  Mastic-m=1,n=256.toml  Mastic-m=1,n=64.toml  Mastic-m=10,n=128.toml  Mastic-m=10,n=256.toml  Mastic-m=10,n=64.toml  Mastic-m=30,n=128.toml  Mastic-m=30,n=256.toml  Mastic-m=30,n=64.toml  Mastic-m=5,n=128.toml  Mastic-m=5,n=256.toml  Mastic-m=5,n=64.toml
artifact/configs/figure-4/: Mastic-m=10.toml  Mastic-m=30.toml
artifact/configs/figure-6/: Mastic-A=1.toml  Mastic-A=1024.toml  Mastic-A=128.toml  Prio-A=1.toml  Prio-A=1024.toml  Prio-A=128.toml
artifact/plots/: figure-3.py  figure-6.py  requirements.txt
artifact/plots/data/: figure-3.csv  figure-4.csv
plots/: README.md  figure-4.py  figure-5.py
plots/data/: figure-5.csv  figure-6.csv
src/: collect.rs  config.rs  consts.rs  dpf.rs  fastfield.rs  field.rs  hh_rpc.rs  histogram_rpc.rs  idpf_rpc.rs  interface.rs  lib.rs  main.rs  prg.rs  private.rs  rpc.rs  vidpf.rs
src/configs/: attribute-based-metrics.toml  config.toml  plain-metrics.toml  weighted-heavy-hitters.toml
tests/: collect_test.rs  dpf_test.rs  flp_test.rs  mpc_test.rs  sketch_test.rs
