[package]
name = "plasma"
description = "Library for translating between GPS coordinates (WGS84) and Open Location Code"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>"]
keywords = ["cryptography", "secret-sharing", "distributed-point-functions", "dpf", "fss", "geography", "geospatial", "gis", "gps", "olc"]
license = "MIT"


[dependencies]
aes = "0.8.1"
bincode = "1.3.3"
bitvec = "1.0.1"
clap = "2.0"
ctr = "0.9.2"
env_logger = "0.9.1"
futures = "0.3.25"
geo = "0.16.0"
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["rand", "serde"] }
num-traits = "0.2.15"
primal = "0.3.1"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tarpc = { version = "0.30.0", features = ["full", "serde-transport", "tcp", "tokio1"]  }
tokio = { version = "1.0", features = ["full", "macros"] }
zipf = "7.0.0"


[[bin]]
name = "idpf-server"
path = "src/bin/idpf_server.rs"

[[bin]]
name = "idpf-leader"
path = "src/bin/idpf_leader.rs"

[[bin]]
name = "idpf-main"
path = "src/bin/idpf_main.rs"

[[bin]]
name = "histogram-server"
path = "src/bin/histogram_server.rs"

[[bin]]
name = "histogram-leader"
path = "src/bin/histogram_leader.rs"

[[bin]]
name = "histogram-main"
path = "src/bin/hist_main.rs"
