[package]
name = "mastic"
description = "Mastic"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>"]
keywords = ["cryptography", "secret-sharing", "distributed-point-functions", "DPF", "VIDPF", "Mastic"]
license = "MIT"


[dependencies]
aes = "0.8.1"
bincode = "1.3.3"
bitvec = "1.0.1"
clap = "2.0"
ctr = "0.9.2"
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4"
num = "0.4.0"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
num-traits = "0.2.16"
primal = "0.3.1"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8.0"
rs_merkle = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tarpc = { version = "0.30.0", features = ["full", "serde-transport", "tcp", "tokio1"]  }
tokio = { version = "1.32.0", features = ["full", "macros"] }
zipf = "7.0.1"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "leader"
path = "src/bin/leader.rs"
